feat(api): Configure DbContext with SQL Server and add initial migration.

--- a/TravelEase.API/appsettings.json
+++ b/TravelEase.API/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "TravelEaseDb": "Server=.;Database=TravelEaseDb;Trusted_Connection=True;TrustServerCertificate=True"
+  }
+
 }
