--- a/TravelEase.API/TravelEase.API.csproj
+++ b/TravelEase.API/TravelEase.API.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.6">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -23,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TravelEase.Application\TravelEase.Application.csproj" />
     <ProjectReference Include="..\TravelEase.Infrastructure\TravelEase.Infrastructure.csproj" />
   </ItemGroup>
 
