feat(infrastructure/domain): implement Argon2 password hashing with salt and verification logic.

--- a/TravelEase.API/appsettings.json
+++ b/TravelEase.API/appsettings.json
@@ -9,6 +9,11 @@
 
   "ConnectionStrings": {
     "TravelEaseDb": "Server=.;Database=TravelEaseDb;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "PasswordHasher": {
+    "SaltSize": 16,
+    "TimeCost": 1,
+    "Secret": "ThisIsASecureAndRandomSecretKey_ForHashingPurposes_ChangeIt",
+    "HashLength": 20
   }
-
 }
