feat(hotel): implement HotelSearchAsync with city, rating, capacity, and discount filtering.

--- a/TravelEase.Infrastructure/TravelEase.Infrastructure.csproj
+++ b/TravelEase.Infrastructure/TravelEase.Infrastructure.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TravelEase.Application\TravelEase.Application.csproj" />
     <ProjectReference Include="..\TravelEase.Domain\TravelEase.Domain.csproj" />
   </ItemGroup>
 
