--- a/TravelEase.Infrastructure/TravelEase.Infrastructure.csproj
+++ b/TravelEase.Infrastructure/TravelEase.Infrastructure.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.7" />
     <PackageReference Include="NReco.PdfGenerator" Version="1.2.1" />
     <PackageReference Include="SendGrid" Version="9.29.3" />
+    <PackageReference Include="Stripe.net" Version="48.3.0" />
   </ItemGroup>
 
   <ItemGroup>
