test(application): add unit tests for DeleteBookingCommandHandler covering all validation scenarios.

--- a/TravelEase.Tests/TravelEase.Tests.csproj
+++ b/TravelEase.Tests/TravelEase.Tests.csproj
@@ -21,6 +21,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TravelEase.API\TravelEase.API.csproj" />
+    <ProjectReference Include="..\TravelEase.Application\TravelEase.Application.csproj" />
+    <ProjectReference Include="..\TravelEase.Domain\TravelEase.Domain.csproj" />
+    <ProjectReference Include="..\TravelEase.Infrastructure\TravelEase.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
