--- a/TravelEase.Infrastructure/TravelEase.Infrastructure.csproj
+++ b/TravelEase.Infrastructure/TravelEase.Infrastructure.csproj
@@ -17,8 +17,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.7" />
-    <PackageReference Include="NReco.PdfGenerator" Version="1.2.1" />
-    <PackageReference Include="SendGrid" Version="9.29.3" />
+	  <PackageReference Include="NReco.PdfGenerator.LT" Version="1.2.1" />
+	  <PackageReference Include="SendGrid" Version="9.29.3" />
     <PackageReference Include="Stripe.net" Version="48.3.0" />
   </ItemGroup>
 
