--- a/TravelEase.Application/TravelEase.Application.csproj
+++ b/TravelEase.Application/TravelEase.Application.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="MediatR" Version="12.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="2.3.0" />
     <PackageReference Include="Stripe.net" Version="48.3.0" />
+	<PackageReference Include="FluentValidation.AspNetCore" Version="11.3.1" />
   </ItemGroup>
 
   <ItemGroup>
