--- a/backend/TravelEase.Infrastructure/TravelEase.Infrastructure.csproj
+++ b/backend/TravelEase.Infrastructure/TravelEase.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="CloudinaryDotNet" Version="1.27.6" />
+    <PackageReference Include="DinkToPdf" Version="1.0.8" />
     <PackageReference Include="Isopoh.Cryptography.Argon2" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.3.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
@@ -24,6 +25,15 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TravelEase.Domain\TravelEase.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="DinkToPdf\libwkhtmltox\libwkhtmltox.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="DinkToPdf\libwkhtmltox\libwkhtmltox.so">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
